--- a/expenses/templates/display.html
+++ b/expenses/templates/display.html
@@ -1,7 +1,7 @@
 
 {% extends "base.html" %}
 {% block title %}
-<h1> My Expenses</h1>
+<h1> {{username.capitalize}}'s Expenses</h1>
 <form action="/search/" method="POST">Search: <input name='q' autofocus></form>
 {{ message|default:'' }}
 {% endblock %}
